Causeview Package Complete/ant script/retrieveUnpackaged/objects/givingpowerSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Causeview communication and notification templates.</description>
    <fields>
        <fullName>ConsolidatedReceiptEmailTemplateId__c</fullName>
        <label>Consolidated Receipt Email Template ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsolidatedReceiptPDFDocId__c</fullName>
        <inlineHelpText>The ID of the HTML Document used as Consolidated Receipt&apos;s PDF Template</inlineHelpText>
        <label>Consolidated Receipt PDF Document Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_Duplicate_Receipt_Email_Doc__c</fullName>
        <description>Consolidated Duplicate Receipt Email Doc</description>
        <label>Consolidated Duplicate Receipt Email Doc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_Receipt_Email_Document_Id__c</fullName>
        <description>Consolidated Receipt Email Document Id</description>
        <label>Consolidated Receipt Email Document Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeAttachTemplateId__c</fullName>
        <label>Duplicate Receipt PDF Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeConsolidatedReceiptEmailTempId__c</fullName>
        <label>Dupe Consolidated Receipt Email Temp Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeConsolidatedReceiptPDFDocId__c</fullName>
        <label>Dupe Consolidated Receipt PDF Doc Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeDocumentTemplateId__c</fullName>
        <label>Duplicate Receipt Email Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeEmailTemplateId__c</fullName>
        <label>Duplicate Email Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dupe_Event_Registration_Email_Doc_ID__c</fullName>
        <description>Duplicate event registration email content document ID (Salesforce ID)</description>
        <inlineHelpText>Duplicate event registration email content document ID (Salesforce ID)</inlineHelpText>
        <label>Dupe Event Registration Email Doc ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dupe_Event_Registration_Template_ID__c</fullName>
        <description>Event registration communication template ID (Salesforce ID) - duplicate/replacement template</description>
        <inlineHelpText>Event registration communication template ID (Salesforce ID) - duplicate/replacement template</inlineHelpText>
        <label>Dupe Event Registration Template ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTemplateId__c</fullName>
        <inlineHelpText>The Id of the Visualforce Email Template</inlineHelpText>
        <label>Email Template ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Registration_Email_Doc_ID__c</fullName>
        <description>Event registration email content document ID (Salesforce ID)</description>
        <inlineHelpText>Event registration email content document ID (Salesforce ID)</inlineHelpText>
        <label>Event Registration Email Doc ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Registration_Email_Template_ID__c</fullName>
        <description>Event registration communication template ID (Salesforce ID)</description>
        <inlineHelpText>Event registration communication template ID (Salesforce ID)</inlineHelpText>
        <label>Event Registration Email Template ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Lead_Template_Id__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>This is the template Id for the Email template sent to users when a lead is converted in their name.</description>
        <inlineHelpText>This is the template Id for the Email template sent to users when a lead is converted in their name.</inlineHelpText>
        <label>New Lead Template Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Wide_Email_ID__c</fullName>
        <description>The Salesforce ID of the Organization Wide Email address you would like your Automatic receipting messages to come from.</description>
        <inlineHelpText>The Salesforce ID of the Organization Wide Email address you would like your Automatic receipting messages to come from.</inlineHelpText>
        <label>Org Wide Email ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiptEmailDocId__c</fullName>
        <inlineHelpText>The ID of the document (set as public) used for Receipt Email Template</inlineHelpText>
        <label>Receipt Email Document Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiptPDFDocId__c</fullName>
        <inlineHelpText>The ID of the HTML Document used as Receipt&apos;s PDF Template</inlineHelpText>
        <label>Receipt PDF Document Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Batch_Size__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Recurring Batch Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>Number of records that should be processed in a batch in order to recalculate total giving and first/last transaction date.</inlineHelpText>
        <label>Rollup Batch Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X15_DAYS_CC_Expiry_Email_Template__c</fullName>
        <description>Template used to send to donor when today is 15 days before credit card expiry date.</description>
        <inlineHelpText>Populate with Salesforce email template Id. Template used to send to donor when today is 15 days before credit card expiry date.</inlineHelpText>
        <label>15 DAYS - CC Expiry Email Template</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X30_DAYS_CC_Expiry_Email_Template__c</fullName>
        <description>Template used to send to donor when today is 30 days before credit card expiry date.</description>
        <inlineHelpText>Populate with Salesforce email template Id. Template used to send to donor when today is 30 days before credit card expiry date.</inlineHelpText>
        <label>30 DAYS - CC Expiry Email Template</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Causeview Templates</label>
</CustomObject>